- ScreenUrlInfo has been cleaned up with single use parts split into the
  UrlInstance class; these are currently internal implementation classes so
  this isn't an API change, but this is a non-backward compatible change
  and some code using the ScreenRenderImpl and ScreenUrlInfo may need to be
  updated similar to the changes in DefaultScreenMacros.html.ftl
- CUPS print server integration and print job management services and admin
  screens in the System app; can render XSL-FO screens to PDF/etc and
  print, print ResourceFacade resources, and direct print other documents

Bug Fixes:

- Fixed issue with XML Form display-entity where an EntityValue was pushed
  onto the context (bad in the first place, changed to push Map clone of
  EV) and if there was an error in the string expand it stayed
- No longer create auto reverse relationships for relationships going to
  the same entity, results in multiple relationships with the same name and
  the reverse one can get picked up and isn't the one desired
- Fixed issues with loading KIE modules and JAR files from components on
  Windows caused by issue in BaseResourceReference URI handling

===========================================================================
Release 1.5.1 - 29 Mar 2015
===========================================================================

Moqui Framework 1.5.1 is a minor new feature and bug fix release.

New features in this release include various enhancements to DataDocument
functionality and the introduction of the search#CountBySource to be used
for analytics and reporting using ElasticSearch as the data store. Note
that as part of these changes the fields of the primary entity of a
DataDocument are in the root map/object of the document instead of in a
map/object names for the primary entity.

There is also new functionality for handling JSON documents in more places
including load/import and write/export of entity data and a generic entity